--- a/wear/src/main/res/layout/item.xml
+++ b/wear/src/main/res/layout/item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <com.example.nghiabuivan.awear.ItemLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:gravity="center_vertical"
@@ -6,10 +7,10 @@
 	android:layout_height="80dp">
 	<ImageView
 		android:id="@+id/image"
-		android:layout_height="20dp"
+		android:layout_height="25dp"
 		android:layout_margin="16dp"
-		android:layout_width="20dp"
-		android:src="@drawable/wl_circle"/>
+		android:layout_width="25dp"
+		/>
 	<TextView
 		android:id="@+id/name"
 		android:gravity="center_vertical|left"
@@ -19,5 +20,6 @@
 		android:fontFamily="sans-serif-condensed-light"
 		android:lineSpacingExtra="-4sp"
 		android:textColor="@color/text_color"
-		android:textSize="16sp"/>
+		android:textSize="20sp"
+		/>
 </com.example.nghiabuivan.awear.ItemLayout>
