--- a/wear/src/main/res/layout/item.xml
+++ b/wear/src/main/res/layout/item.xml
@@ -4,19 +4,20 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:gravity="center_vertical"
 	android:layout_width="match_parent"
-	android:layout_height="80dp">
+	android:layout_height="wrap_content"
+	>
 	<ImageView
 		android:id="@+id/image"
-		android:layout_height="25dp"
+		android:layout_width="32dp"
+		android:layout_height="32dp"
 		android:layout_margin="16dp"
-		android:layout_width="25dp"
 		/>
 	<TextView
 		android:id="@+id/name"
-		android:gravity="center_vertical|left"
+		android:gravity="center_vertical|start"
 		android:layout_width="wrap_content"
-		android:layout_marginRight="16dp"
 		android:layout_height="match_parent"
+		android:layout_marginEnd="16dp"
 		android:fontFamily="sans-serif-condensed-light"
 		android:lineSpacingExtra="-4sp"
 		android:textColor="@color/text_color"
