--- a/wear/src/main/res/layout/welcome.xml
+++ b/wear/src/main/res/layout/welcome.xml
@@ -36,6 +36,14 @@ android:layout_width="match_parent">
 		android:layout_gravity="center_horizontal"
 		android:textColor="#ff0000ff"/>
 
+	<Button
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Cancel"
+		android:id="@+id/button_cancel_sync"
+		android:layout_gravity="center_horizontal"
+		android:visibility="gone"/>
+
 </LinearLayout>
 
 </android.support.wearable.view.BoxInsetLayout>
